[bug] possible solution to issues with modals not showing
https://www.i-dont-care-about-cookies.eu/ is injecting CSS: .cc-modal, .modal-shown.d-block { display: none !important} which affects all other modals

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -170,6 +170,10 @@ form[disabled] {
     bottom: 3px !important;
 }
 
+.modal.modal-shown.d-block {
+    display: block !important;
+}
+
 @include media-breakpoint-up('lg') {
     .table-wide {
         margin-left: calc(-50vw + 50% + 3rem);
